--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,6 +39,7 @@ box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
 transition: width .3s, height .3s;
 transition-timing-function: ease;
 
+
 }
 
 section#login > div#imagem{
@@ -54,4 +55,12 @@ div#formulario{
     display: block;
    padding: 10px;
    
+   
+}
+
+
+#formulario > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+
 }
