--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -9,7 +9,7 @@
 /* AQUI É VERSÃO TABLET */
 @media screen and (min-width:768px) and (max-width: 992px) {
     body{
-        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+        background-image: linear-gradient(to top, #49a09d, #5f2c82) ;
     }
 
 
@@ -23,7 +23,7 @@
         float: left;
         
     }
-    section#login > #formulario{
+    section#login > div#formulario{
         float: right;
         width: 70%;
     }
@@ -49,7 +49,7 @@
 
     section#login{
         width: 950px;
-        
+       
 
     }
     #imagem{
@@ -60,7 +60,7 @@
     }
     #formulario{
         float: left;
-        width: 50%;
+        width: 90%;
     }
 }
 
