--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,12 +31,12 @@ section#login{
     left: 50%;
     transform: translate(-50%, -50%);
 background-color: white;
-width: 250px;
-height: 500px;
+width: 260px;
+height: 550px;
 border-radius: 20px;
 overflow: hidden;
 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.459);
-transition: width .3s, height .3s;
+transition: width .4s, height .4s;
 transition-timing-function: ease;
 
 
@@ -51,7 +51,7 @@ section#login > div#imagem{
 
 }
 
-div#formulario{
+section#login > div#formulario{
     display: block;
    padding: 10px;
    
@@ -62,5 +62,63 @@ div#formulario{
 #formulario > h1 {
     text-align: center;
     margin-bottom: 10px;
+    
 
 }
+
+div.campo{
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label{
+    display: none;
+}
+
+
+
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+   margin-top: 12px;
+   background-color:#49a09d ;
+   color: white;
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+}
+
+ form > input[type=submit]:hover {
+background-color: #054240;
+ }
+
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    padding-top: 7px;
+   margin-top: 5px;
+   
+    height: 40px;
+    background-color: #ffffff ;
+    color: #2d6462;
+    border: 1px solid #054240 ;
+    border-radius: 5px;
+    text-decoration: none;
+}
+form > a.botao i:hover{
+    background-color: #0c887e ;
+}
+
+form > a.botao > i{
+    font-size: 0.8em;
+ }
