--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,7 +43,7 @@ transform: translate(-50%, -50%);
 
 section#login > div#imagem{
     display: block;
-    background: #5f2c82 url(../imagens/pexels-vinixhc-20268522\ \(1\).jpg) no-repeat;
+    background: #5f2c82 url(../imagens/pexels-essow-k-251295-936722.jpg) no-repeat;
     background-size: cover;
     background-position: center center;
     height: 200px;
